# newrelic-telemetry-sdk-python

./: .buildinfo  .gitignore  .megalinter.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.rst  THIRD_PARTY_NOTICES.rst  advanced.html  api.html  azure-pipelines.yml  genindex.html  index.html  objects.inv  proxy.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: addlicense.yml  deploy.yml  mega-linter.yml  tests.yml
_modules/: index.html  threading.html
_modules/newrelic_telemetry_sdk/: batch.html  client.html  event.html  harvester.html  log.html  metric.html  metric_batch.html  span.html  span_batch.html
_modules/urllib3/: connectionpool.html
_sources/: advanced.rst.txt  api.rst.txt  index.rst.txt  quickstart.rst.txt
docs/: advanced.rst  api.rst  conf.py  index.rst  proxy.rst  quickstart.rst
src/newrelic_telemetry_sdk/: __init__.py  batch.py  client.py  event.py  harvester.py  log.py  metric.py  metric_batch.py  span.py  span_batch.py
tests/: conftest.py  test_batch.py  test_client.py  test_client_proxy.py  test_event.py  test_harvester.py  test_log.py  test_metric.py  test_metric_batch.py  test_span.py  test_span_batch.py  test_version.py  utils.py
