[metadata]
description = New Relic Telemetry SDK
long_description = file: README.rst
long_description_content_type = text/x-rst
author = New Relic
author_email = open-source@newrelic.com
url = https://newrelic.github.io/newrelic-telemetry-sdk-python
project_urls =
    Source=https://github.com/newrelic/newrelic-telemetry-sdk-python
platforms = any
license = Apache-2.0
license_files =
    LICENSE
    THIRD_PARTY_NOTICES.rst
classifiers =
    Development Status :: 3 - Alpha
    Topic :: System :: Monitoring
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
setup_requires =
    setuptools_scm
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-modules --strict-markers -v
testpaths = src tests
filterwarnings =
    error
xfail_strict = true
markers =
    client_args: Extra arguments that are provided when constructing the client.

[flake8]
max-line-length = 88
ignore = W503,E203

[coverage:run]
branch = True
source = newrelic_telemetry_sdk
